Ingress-nginx/deployment-whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:latest
        ports:
        - containerPort: 80
