Ingress-nginx/service-svc-nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
