Ingress-nginx/service-svc-whoami-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-whoami
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
